--- a/index.html
+++ b/index.html
@@ -97,64 +97,52 @@
     </style>
 </head>
 <body>
-  <div class="container">
-    <div class="row navigation">
-      <div class="span2 logo">
-	Logo
-      </div>
-      <div class="span6 blank">
-	Blank
-      </div>
-      <div class="span4 about">
-	About
+
+  <!-- Mobile-friendly navbar adapted from example. -->
+  <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+	<button type="button" class="btn btn-navbar"
+		data-toggle="collapse" data-target=".nav-collapse">
+	  <span class="icon-bar"></span>
+	  <span class="icon-bar"></span>
+	  <span class="icon-bar"></span>
+	</button>
+	<a class="brand" href="#">Bitstarter</a>
+	<div class="nav-collapse collapse">
+	  <ul class="nav">
+	    <li class="active"><a href="#">Home</a></li>
+	    <li><a href="#about">About</a></li>
+	    <li><a href="#contact">Contact</a></li>
+	    </ul>
+	  </div><!--.nav-collapse-->
+	</div>
       </div>
     </div>
-      <div class="row heading">
-	<div class="span12">
-	  <h1>Bitstarter Title</h1>
-	</div>
-      </div>	
- <div class="row subheading">
-	<div class="span12">
-	  <p class="lead">This is my first bitstarter project.</p>
-	</div>
-      </div>	
- <div class="row pitch">
-   <div class="span6 video">
-     Video
-     </div>
-   <div class="span6">
-     <div class="thermometer">
-       Thermometer
-     </div>
-    <div class="order">
-      Order
-     </div>
-  <div class="social">
-      Social
-     </div>
-  </div>
-</div>
-<div class="row section1">
-  <div class="span12">
-    Marketing Section 1
-     </div>
-  </div>
-<div class="row section2">
-  <div class="span12">
-    Marketing Section 2
-     </div>
-  </div>
-<div class="row faq">
-  <div class="span12">
-    FAQ
-     </div>
-  </div>
-<div class="row footer">
-  <div class="span12">
-    Footer
-     </div>
-  </div>
- </div>
+
+  <!-- We use row-fluid inside containers to achieve a resizable layout. -->
+  <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
+  <!-- http://stacoverflow.com/a/12270322 -->
+  <div class="container">
+    <!-- Font and paired font of .heading, .subheaning and body form Google Fonts -->
+    <!-- www.google.com/fonts/specimen/Ubuntu -->
+    <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
+    <div class="row-fluid heading">
+      <h1>Product</h1>
+      </div>
+    </div>
+  <div class="row-fluid subheading">
+    <div class="span12">
+      <!-- Special typography from Bootstrap for lead Paragraph. -->
+      <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
+      <p class="lead">One sentence description.</p>
+      </div>
+    </div>
+  <div class="row-fluid pitch">
+
+
+
+
 </body>
 </html>
