Preparing first empty version of my own idea, still without a clue

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>My yet unknown great idea for a startup</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -129,14 +129,14 @@
     <!-- www.google.com/fonts/specimen/Ubuntu -->
     <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
     <div class="row-fluid heading">
-      <h1>Product</h1>
+      <h1>My great product</h1>
       </div>
     </div>
   <div class="row-fluid subheading">
     <div class="span12">
       <!-- Special typography from Bootstrap for lead Paragraph. -->
       <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-      <p class="lead">One sentence description.</p>
+      <p class="lead">This is a great tool to do this and that.</p>
       </div>
     </div>
   <div class="row-fluid pitch">
@@ -151,17 +151,17 @@
 	  <div class="span4">
 	    <!-- linediv-l and linediv-r give dividing lines that look different in horizontal and vertical layouts, illustrating media queries. -->
 	    <div class="linediv-l">
-	      <h3>1000</h3> <p>backers</p>
+	      <h3>1</h3> <p>backers</p>
 	      </div>
 	    </div>
 	    <div class="span4">
 	      <div class="linediv-c">
-		<h3>$6000</h3> <p>of $10,000</p>
+		<h3>$200</h3> <p>of $100,000</p>
 		</div>
 	      </div>
 	     <div class="span4">
 	      <div class="linediv-r">
-		<h3>10</h3> <p>days left</p>
+		<h3>30</h3> <p>days left</p>
 		</div>
 	      </div>
 	    </div>
@@ -170,8 +170,8 @@
 	  <!-- Bootstrap progress bar -->
 	  <!-- http://twitter.github.io/bootsrap/components.html#progress -->
 	  <div class="thermometer progress active">
-	    <div class="bar bar-success" style="width: 60%;"></div>
-	    <div class="bar bar-warning" style="width: 40%;"></div>
+	    <div class="bar bar-success" style="width: 5%;"></div>
+	    <div class="bar bar-warning" style="width: 95%;"></div>
 	    </div>
 	  </div>
 	<div class="span6 offset3 order">
@@ -194,22 +194,28 @@
    <!-- http://placehold.it -->
    <div class="row-fluid section1">
      <div class="span5 offset1 asset">
-       <img class="img-polaroid" src="http://placehold.it/480x300">
+       <img class="img-polaroid" src="http://placehold.it/480x200">
        </div>
      <div class="span5 copy">
        <p>
-	 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin erat nisl, luctus nec, gravida semper, malesuada quis, elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas volutpat ullamcorper augue. Sed ut diam. Duis eu dui. Mauris pharetra. Nulla facilisi. Vestibulum imperdiet mauris at urna. Nullam facilisis, turpis faucibus tincidunt blandit, enim leo fermentum lacus, sit amet aliquet mi leo id velit. Nullam bibendum, libero et lacinia dignissim, lorem purus lobortis dolor, id eleifend lorem sem in nisi. Nulla in metus. Etiam pretium ornare purus. Fusce molestie urna nec eros tempus tempor. Ut tempus. Aliquam elementum malesuada mi.
+So, this text will contain a wonderful description about the fantastic things my startup will deliver. It will be a great product, very helpful, but I still have no clue about what it will be. Please don't despair, I will definitely come up with a marvellous idea that will launch my startup to Silicon Valley.
+Actually I am taking a week of work to think about this slowly, calmly and without pressure.
 	 </p>
        </div>
      </div>
    <div class="row-fluid section2">
      <div class="span5 offset1 copy copy-right">
        <p>
-	 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin erat nisl, luctus nec, gravida semper, malesuada quis, elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas volutpat ullamcorper augue. Sed ut diam. Duis eu dui. Mauris pharetra. Nulla facilisi. Vestibulum imperdiet mauris at urna. Nullam facilisis, turpis faucibus tincidunt blandit, enim leo fermentum lacus, sit amet aliquet mi leo id velit. Nullam bibendum, libero et lacinia dignissim, lorem purus lobortis dolor, id eleifend lorem sem in nisi. Nulla in metus. Etiam pretium ornare purus. Fusce molestie urna nec eros tempus tempor. Ut tempus. Aliquam elementum malesuada mi.
+This second text section will start explaining all the features of my product. So, for example:
 	 </p>
+       <ul>
+	 <li>My product rocks!</Li>
+	 <li>It will be very useful</li>
+	 <li>It will make me rich!</li>
+	 <li>It will be a profitable business!</li>
        </div>
      <div class="span5 asset">
-       <img class="img-polaroid" src="http://placehold.it/480x300">
+       <img class="img-polaroid" src="http://placehold.it/480x150">
      </div>
      </div>
 
@@ -224,12 +230,12 @@
 	   <div class="accordion-heading">
 	     <a class="accordion-toggle" data-toggle="collapse"
 		data-parent="#accordion2" href="#collapseOne">
-	       What does FAQ stand for?
+	       Will it be useful?
 	       </a>
 	     </div>
 	   <div id="collapseOne" class="accordion-body collapse">
 	     <div class="accordion-inner">
-	       Frequently Asked Question.
+	       Definitely, it will be very useful.
 	       </div>
 	     </div>
 	   </div>
@@ -237,15 +243,29 @@
 	   <div class="accordion-heading">
 	     <a class="accordion-toggle" data-toggle="collapse"
 		data-parent="#accordion2" href="#collapseTwo">
-	       What's a Frequently Asked Question?
+	       Will it be cheap?
 	       </a>
 	     </div>
 	   <div id="collapseTwo" class="accordion-body collapse">
 	     <div class="accordion-inner">
-	       A question which is commonly asked by users.
+	       I don't know yet, I hope so.
 	       </div>
 	     </div>
 	   </div>
+	 <div class="accordion-group">
+	   <div class="accordion-heading">
+	     <a class="accordion-toggle" data-toggle="collapse"
+		data-parent="#accordion2" href="#collapseThree">
+	       Can you give us any more information?
+	       </a>
+	     </div>
+	   <div id="collapseThree" class="accordion-body collapse">
+	     <div class="accordion-inner">
+	       Not yet, in a week, I hope.
+	       </div>
+	     </div>
+	   </div>
+
 	 </div>
  </div>
      <!-- Not crucial, but we put this under a CC By-SA 3.0 licence. -->
